implement coupon page for admin role
